2006-01-09  Roman Kennke  <kennke@aicas.com>

	* javax/tools/Diagnostic.java,
	* javax/tools/DiagnosticListener.java:
	New interfaces.

2006-01-09  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/x/XWindowPeer.java
	(getFontMetrics): Re-enable that for X fonts.

2008-01-09  Stefan Huehner <stefan@huehner.org>


	* examples/gnu/classpath/examples/java2d/J2dBenchmark.java,
	* gnu/CORBA/OrbFocused.java,
	* gnu/CORBA/CDR/HeadlessInput.java,
	* gnu/java/awt/peer/gtk/CairoGraphics2D.java,
	* gnu/java/awt/peer/gtk/GtkFramePeer.java,
	* gnu/java/awt/peer/qt/QtMenuPeer.java,
	* gnu/java/nio/FileChannelImpl.java,
	* gnu/java/nio/SocketChannelSelectionKeyImpl.java,
	* gnu/java/security/Engine.java,
	* gnu/javax/imageio/jpeg/JPEGComponent.java,
	* gnu/javax/imageio/jpeg/JPEGDecoder.java,
	* gnu/javax/imageio/jpeg/JPEGFrame.java,
	* gnu/javax/print/PrinterDialog.java,
	* gnu/javax/security/auth/Password.java,
	* gnu/javax/swing/text/html/parser/support/Parser.java,
	* gnu/javax/swing/text/html/parser/support/parameterDefaulter.java,
	* gnu/xml/pipeline/DomConsumer.java,
	* java/awt/AWTKeyStroke.java,
	* java/awt/DefaultKeyboardFocusManager.java,
	* java/awt/GridBagLayout.java,
	* java/awt/dnd/DragGestureRecognizer.java,
	* java/awt/geom/Arc2D.java,
	* java/awt/geom/CubicCurve2D.java,
	* java/awt/geom/QuadCurve2D.java,
	* java/awt/im/InputContext.java,
	* java/awt/image/AffineTransformOp.java,
	* java/beans/Encoder.java,
	* java/io/ObjectInputStream.java,
	* java/io/ObjectStreamClass.java,
	* java/net/ResolverCache.java,
	* java/nio/charset/Charset.java,
	* java/security/SecureClassLoader.java,
	* java/text/MessageFormat.java,
	* java/util/jar/Manifest.java,
	* javax/accessibility/AccessibleRelationSet.java,
	* javax/imageio/ImageReader.java,
	* javax/imageio/metadata/IIOMetadataNode.java,
	* javax/print/attribute/standard/MediaSize.java,
	* javax/print/attribute/standard/PrinterStateReasons.java,
	* javax/swing/JTree.java,